--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
       <div class="certifications-grid">
         <div class="cert-card">
           <div class="cert-top cert-top--stanford">
-            <img src="./graphics/stanfordlogo.png" alt="Stanford" class="cert-logo">
+            <img src="./graphics/stanford.jpg" alt="Stanford" class="cert-logo">
           </div>
           <div class="cert-bottom">
             <h4 class="cert-title">Machine Learning</h4>
@@ -758,51 +758,51 @@
 
         <div class="cert-card">
           <div class="cert-top cert-top--deep-learning">
-            <img src="./assets/education/deep_learning_logo.png" alt="Deep Learning" class="cert-logo">
+            <img src="./graphics/matlablogo.png" alt="Matlab" class="cert-logo">
           </div>
           <div class="cert-bottom">
-            <h4 class="cert-title">Deep Learning Specialization</h4>
-            <p class="cert-provider">Andrew Ng</p>
+            <h4 class="cert-title">Adaptive Neuro Fuzzy Inference System</h4>
+            <p class="cert-provider">Watlab</p>
           </div>
         </div>
 
         <div class="cert-card">
           <div class="cert-top cert-top--google">
-            <img src="./assets/education/google_logo.png" alt="Google Cloud" class="cert-logo">
+            <img src="./graphics/udemy.png" alt="udemy logo" class="cert-logo">
           </div>
           <div class="cert-bottom">
-            <h4 class="cert-title">Machine Learning on GCP</h4>
-            <p class="cert-provider">Google Cloud Training</p>
+            <h4 class="cert-title">Python Machine Learning</h4>
+            <p class="cert-provider">Udemy</p>
           </div>
         </div>
 
         <div class="cert-card">
           <div class="cert-top cert-top--ibm">
-            <img src="./assets/education/ibm_logo.png" alt="IBM" class="cert-logo">
+            <img src="./graphics/matlablogo.png" alt="matlab" class="cert-logo">
           </div>
           <div class="cert-bottom">
-            <h4 class="cert-title">Data Science Professional</h4>
-            <p class="cert-provider">IBM</p>
+            <h4 class="cert-title">Control Systems</h4>
+            <p class="cert-provider">Matlab</p>
           </div>
         </div>
 
         <div class="cert-card">
           <div class="cert-top cert-top--microsoft">
-            <img src="./assets/education/microsoft_logo.png" alt="Microsoft" class="cert-logo">
+            <img src="./graphics/autocadlogo.png" alt="Autocad" class="cert-logo">
           </div>
           <div class="cert-bottom">
-            <h4 class="cert-title">Big Data Analytics</h4>
-            <p class="cert-provider">Microsoft</p>
+            <h4 class="cert-title">Electrical Panel Design</h4>
+            <p class="cert-provider">Autocad Electrical</p>
           </div>
         </div>
 
         <div class="cert-card">
           <div class="cert-top cert-top--ibm-advanced">
-            <img src="./assets/education/ibm_logo.png" alt="IBM" class="cert-logo">
+            <img src="./graphics/powerworld.png" alt="Power World Simulator" class="cert-logo">
           </div>
           <div class="cert-bottom">
-            <h4 class="cert-title">Advanced Data Science</h4>
-            <p class="cert-provider">IBM</p>
+            <h4 class="cert-title">Power System Design</h4>
+            <p class="cert-provider">Power World Simulator</p>
           </div>
         </div>
       </div>
@@ -5270,6 +5270,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
