image issue solved

--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
             <img src="./graphics/stanford.jpg" alt="Stanford" class="cert-logo">
           </div>
           <div class="cert-bottom">
-            <h4 class="cert-title">Machine Learning</h4>
+            <h4 class="cert-title">Deep Learning AI</h4>
             <p class="cert-provider">Andrew Ng</p>
           </div>
         </div>
@@ -768,10 +768,10 @@
 
         <div class="cert-card">
           <div class="cert-top cert-top--google">
-            <img src="./graphics/udemy.png" alt="udemy logo" class="cert-logo">
+            <img src="./graphics/udemylogo.png" alt="udemy logo" class="cert-logo">
           </div>
           <div class="cert-bottom">
-            <h4 class="cert-title">Python Machine Learning</h4>
+            <h4 class="cert-title">Python ML </h4>
             <p class="cert-provider">Udemy</p>
           </div>
         </div>
@@ -5270,6 +5270,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
