aaded heading to ai data center research

--- a/index.html
+++ b/index.html
@@ -1139,8 +1139,22 @@
   
   <div class="max-w-7xl mx-auto">
     <h2 class="orbitron text-4xl font-bold text-center mb-12">
-      <span class="status-indicator status-active"></span>ELECTRICAL ENGINEERING PORTFOLIO
+      <span class="status-indicator status-active"></span>CURRENT RESEARCHES/PUBLICATIONS
     </h2>
+
+
+    <!-- Add this RIGHT AFTER this line: <h2 class="orbitron text-4xl font-bold text-center mb-12"> -->
+
+<div class="max-w-4xl mx-auto text-center mb-16">
+  <h3 class="orbitron text-3xl font-bold mb-6 text-accent-cyan">
+    The Next Frontier in Electrical Engineering: AI Data Center Power Systems
+  </h3>
+  <p class="text-lg text-gray-300 italic">
+    My Current AI Data Center Power System Research
+  </p>
+</div>
+
+<!-- Then the existing grid with projects continues below -->
     
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mb-16">
   <!-- WHAT Section -->
@@ -5270,6 +5284,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
