--- a/index.html
+++ b/index.html
@@ -4099,6 +4099,302 @@ normalization</p>
         <!-- Add images if you have: <img src="./assets/internship/manipal1.png" ... onclick="openModal(...)"> -->
         <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Manipal Internship Details" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Details</a>
       </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- INTERNSHIP EXPERIENCE SECTION -->
+<section id="internship" class="section interests-bg">
+  <div class="max-w-7xl mx-auto">
+    <h2 class="orbitron text-4xl font-bold text-center mb-12">
+      <span class="status-indicator status-active"></span>INTERNSHIP EXPERIENCE
+    </h2>
+
+    <!-- 3x2 GRID LAYOUT -->
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-10">
+
+      <!-- BOX 1: Power Architecture & ATS Systems -->
+      <div class="project-card hologram small-card">
+        <div class="hud-corner tl"></div><div class="hud-corner tr"></div>
+        <div class="hud-corner bl"></div><div class="hud-corner br"></div>
+
+        <h3 class="orbitron text-lg font-bold mb-2 text-accent-cyan">
+          Power Architecture & ATS Systems
+        </h3>
+        <p class="text-sm mb-3">
+          Studied hospital power design, grid-backup coordination, bus coupling, and automatic transfer systems ensuring uninterrupted supply.
+        </p>
+
+        <!-- Image Carousel -->
+        <div class="relative overflow-hidden rounded-lg border border-[var(--accent-cyan)] carousel-box">
+          <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="carousel-1">
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/power_architecture1.jpg" alt="ATS Setup" onclick="openModal('./graphics/power_architecture1.jpg', 'ATS Setup')" />
+            </div>
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/power_architecture2.jpg" alt="Power Layout" onclick="openModal('./graphics/power_architecture2.jpg', 'Power Layout')" />
+            </div>
+          </div>
+          <button onclick="slideCarousel('carousel-1', -1)" class="carousel-btn left">‹</button>
+          <button onclick="slideCarousel('carousel-1', 1)" class="carousel-btn right">›</button>
+        </div>
+      </div>
+
+      <!-- BOX 2: PLC, SCADA & HMI Systems -->
+      <div class="project-card hologram small-card">
+        <div class="hud-corner tl"></div><div class="hud-corner tr"></div>
+        <div class="hud-corner bl"></div><div class="hud-corner br"></div>
+
+        <h3 class="orbitron text-lg font-bold mb-2 text-accent-cyan">
+          PLC, SCADA & HMI Systems
+        </h3>
+        <p class="text-sm mb-3">
+          Observed automation and centralized control using PLC, SCADA, and HMI systems to enhance reliability and real-time monitoring.
+        </p>
+
+        <div class="relative overflow-hidden rounded-lg border border-[var(--accent-cyan)] carousel-box">
+          <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="carousel-2">
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/plc_scada1.jpg" alt="PLC Control Room" onclick="openModal('./graphics/plc_scada1.jpg', 'PLC Control Room')" />
+            </div>
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/plc_scada2.jpg" alt="SCADA Interface" onclick="openModal('./graphics/plc_scada2.jpg', 'SCADA Interface')" />
+            </div>
+          </div>
+          <button onclick="slideCarousel('carousel-2', -1)" class="carousel-btn left">‹</button>
+          <button onclick="slideCarousel('carousel-2', 1)" class="carousel-btn right">›</button>
+        </div>
+      </div>
+
+      <!-- BOX 3: AutoCAD Design Layouts -->
+      <div class="project-card hologram small-card">
+        <div class="hud-corner tl"></div><div class="hud-corner tr"></div>
+        <div class="hud-corner bl"></div><div class="hud-corner br"></div>
+
+        <h3 class="orbitron text-lg font-bold mb-2 text-accent-cyan">
+          AutoCAD Design & Layouts
+        </h3>
+        <p class="text-sm mb-3">
+          Created detailed electrical panel and lighting circuit layouts using AutoCAD for hospital infrastructure planning.
+        </p>
+
+        <div class="relative overflow-hidden rounded-lg border border-[var(--accent-cyan)] carousel-box">
+          <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="carousel-3">
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/autocad1.jpg" alt="Panel Layout" onclick="openModal('./graphics/autocad1.jpg', 'Panel Layout')" />
+            </div>
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/autocad2.jpg" alt="Circuit Design" onclick="openModal('./graphics/autocad2.jpg', 'Circuit Design')" />
+            </div>
+          </div>
+          <button onclick="slideCarousel('carousel-3', -1)" class="carousel-btn left">‹</button>
+          <button onclick="slideCarousel('carousel-3', 1)" class="carousel-btn right">›</button>
+        </div>
+      </div>
+
+      <!-- BOX 4: Oncology Panel & Lighting Design -->
+      <div class="project-card hologram small-card">
+        <div class="hud-corner tl"></div><div class="hud-corner tr"></div>
+        <div class="hud-corner bl"></div><div class="hud-corner br"></div>
+
+        <h3 class="orbitron text-lg font-bold mb-2 text-accent-cyan">
+          Oncology Panel & Lighting Design
+        </h3>
+        <p class="text-sm mb-3">
+          Assisted in electrical layout and supervision for oncology unit panel design and critical lighting systems installation.
+        </p>
+
+        <div class="relative overflow-hidden rounded-lg border border-[var(--accent-cyan)] carousel-box">
+          <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="carousel-4">
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/oncology1.jpg" alt="Oncology Panel Setup" onclick="openModal('./graphics/oncology1.jpg', 'Oncology Panel Setup')" />
+            </div>
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/oncology2.jpg" alt="Lighting Design" onclick="openModal('./graphics/oncology2.jpg', 'Lighting Design')" />
+            </div>
+          </div>
+          <button onclick="slideCarousel('carousel-4', -1)" class="carousel-btn left">‹</button>
+          <button onclick="slideCarousel('carousel-4', 1)" class="carousel-btn right">›</button>
+        </div>
+      </div>
+
+      <!-- BOX 5: Load Profiling & Analysis -->
+      <div class="project-card hologram small-card">
+        <div class="hud-corner tl"></div><div class="hud-corner tr"></div>
+        <div class="hud-corner bl"></div><div class="hud-corner br"></div>
+
+        <h3 class="orbitron text-lg font-bold mb-2 text-accent-cyan">
+          Load Profiling & Analysis
+        </h3>
+        <p class="text-sm mb-3">
+          Conducted load profiling and energy cost estimation using Python and K-Means clustering to optimize hospital power consumption.
+        </p>
+
+        <div class="relative overflow-hidden rounded-lg border border-[var(--accent-cyan)] carousel-box">
+          <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="carousel-5">
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/load_analysis1.jpg" alt="Load Analysis Graph" onclick="openModal('./graphics/load_analysis1.jpg', 'Load Analysis Graph')" />
+            </div>
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/load_analysis2.jpg" alt="Energy Profiling Dashboard" onclick="openModal('./graphics/load_analysis2.jpg', 'Energy Profiling Dashboard')" />
+            </div>
+          </div>
+          <button onclick="slideCarousel('carousel-5', -1)" class="carousel-btn left">‹</button>
+          <button onclick="slideCarousel('carousel-5', 1)" class="carousel-btn right">›</button>
+        </div>
+      </div>
+
+      <!-- BOX 6: Auxiliary Systems Supervision -->
+      <div class="project-card hologram small-card">
+        <div class="hud-corner tl"></div><div class="hud-corner tr"></div>
+        <div class="hud-corner bl"></div><div class="hud-corner br"></div>
+
+        <h3 class="orbitron text-lg font-bold mb-2 text-accent-cyan">
+          Auxiliary Systems Supervision
+        </h3>
+        <p class="text-sm mb-3">
+          Supervised maintenance and inspection of auxiliary systems like pump house, incinerator, and ETP ensuring operational reliability.
+        </p>
+
+        <div class="relative overflow-hidden rounded-lg border border-[var(--accent-cyan)] carousel-box">
+          <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="carousel-6">
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/auxiliary1.jpg" alt="Pump House" onclick="openModal('./graphics/auxiliary1.jpg', 'Pump House')" />
+            </div>
+            <div class="carousel-item flex-shrink-0 w-full">
+              <img src="./graphics/auxiliary2.jpg" alt="ETP System" onclick="openModal('./graphics/auxiliary2.jpg', 'ETP System')" />
+            </div>
+          </div>
+          <button onclick="slideCarousel('carousel-6', -1)" class="carousel-btn left">‹</button>
+          <button onclick="slideCarousel('carousel-6', 1)" class="carousel-btn right">›</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- CAROUSEL & MODAL STYLES -->
+<style>
+  .small-card {
+    padding: 1.2rem;
+    min-height: 480px;
+  }
+
+  .carousel-box {
+    height: 220px;
+    position: relative;
+  }
+
+  .carousel-container {
+    display: flex;
+    width: 100%;
+    height: 220px;
+  }
+  .carousel-item img {
+    width: 100%;
+    height: 220px;
+    object-fit: contain;
+    cursor: pointer;
+  }
+
+  .carousel-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: var(--primary-blue);
+    color: black;
+    padding: 4px 10px;
+    border-radius: 4px;
+    opacity: 0.7;
+    transition: opacity 0.3s;
+  }
+  .carousel-btn:hover { opacity: 1; }
+  .carousel-btn.left { left: 5px; }
+  .carousel-btn.right { right: 5px; }
+
+  /* MODAL */
+  .modal {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0,0,0,0.9);
+    z-index: 1000;
+  }
+  .modal-content {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
+    max-width: 90%; max-height: 90%;
+  }
+  .modal-caption {
+    text-align: center;
+    color: white;
+    margin-top: 10px;
+    font-size: 14px;
+  }
+  .close {
+    position: absolute; top: 10px; right: 20px;
+    color: white; font-size: 28px; cursor: pointer;
+  }
+</style>
+
+<script>
+  function slideCarousel(id, direction) {
+    const carousel = document.getElementById(id);
+    let current = parseInt(carousel.dataset.index || 0);
+    const items = carousel.children.length;
+    current = (current + direction + items) % items;
+    carousel.dataset.index = current;
+    carousel.style.transform = `translateX(-${current * 100}%)`;
+  }
+
+  function openModal(src, caption) {
+    const modal = document.createElement("div");
+    modal.className = "modal";
+    modal.innerHTML = `
+      <span class="close" onclick="this.parentElement.style.display='none'">&times;</span>
+      <img src="${src}" class="modal-content" />
+      <div class="modal-caption">${caption}</div>
+    `;
+    document.body.appendChild(modal);
+    modal.style.display = "block";
+  }
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
       <!-- ELex Engineering -->
       <div class="project-card hologram">
         <h3 class="orbitron text-xl font-bold mb-4 text-warning-amber">ELex Engineering - Energy Audit Internship</h3>
@@ -5284,6 +5580,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
