photo uploaded upto oncology

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;600&display=swap');
+
     
     :root {
       --primary-blue: #00d4ff;
@@ -4145,14 +4146,14 @@ normalization</p>
       <!-- BOX TEMPLATE (repeat 6x) -->
       <!-- BOX 1 -->
       <div class="internship-card">
-        <h3 class="orbitron text-xl font-semibold text-accent-cyan mb-2">⚡ POWER SYSTEMS</h3>
+        <h3 class="orbitron text-xl font-semibold text-accent-cyan mb-2">⚡ POWER SYSTEM ARCHITECHTURE</h3>
         <ul class="text-sm text-gray-300 list-disc pl-4 mb-4">
           <li>Studied hospital power architecture.</li>
           <li>Understood ATS, AVR, and grid backup mechanisms.</li>
         </ul>
         <div class="internship-img-row">
-          <img src="./graphics/power1.jpg" alt="Power Architecture">
-          <img src="./graphics/power2.jpg" alt="ATS System">
+          <img src="./graphics/manipal9.jpg" alt="Power diagram">
+          <img src="./graphics/manipal12.jpg" alt="panel wiring">
         </div>
       </div>
 
@@ -4164,8 +4165,8 @@ normalization</p>
           <li>Understood PLC logic for ATS switching.</li>
         </ul>
         <div class="internship-img-row">
-          <img src="./graphics/automation1.jpg" alt="PLC Panel">
-          <img src="./graphics/automation2.jpg" alt="SCADA System">
+          <img src="./graphics/manipal6.jpg" alt="PLC Panel">
+          <img src="./graphics/manipal8.jpg" alt="SCADA System">
         </div>
       </div>
 
@@ -4177,8 +4178,8 @@ normalization</p>
           <li>Designed sub-circuits and electrical drawings.</li>
         </ul>
         <div class="internship-img-row">
-          <img src="./graphics/autocad1.jpg" alt="AutoCAD Layout">
-          <img src="./graphics/autocad2.jpg" alt="Electrical Design">
+          <img src="./graphics/manipal16.png" alt="Autocad Design">
+          <img src="./graphics/manipal15.png" alt="Panel Design Autocad">
         </div>
       </div>
 
@@ -4190,8 +4191,8 @@ normalization</p>
           <li>Ensured safety, grounding, and load balance.</li>
         </ul>
         <div class="internship-img-row">
-          <img src="./graphics/oncology1.jpg" alt="Oncology Panel">
-          <img src="./graphics/oncology2.jpg" alt="Lighting System">
+          <img src="./graphics/manipal18.png" alt="Oncology wiring design">
+          <img src="./graphics/manipal19.jpg" alt="Physical Panel">
         </div>
       </div>
 
@@ -5509,6 +5510,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
