--- a/index.html
+++ b/index.html
@@ -4204,8 +4204,8 @@ normalization</p>
           <li>Conducted field inspections and diagnostics.</li>
         </ul>
         <div class="internship-img-row">
-          <img src="./graphics/field1.jpg" alt="Field Inspection">
-          <img src="./graphics/field2.jpg" alt="Maintenance Work">
+          <img src="./manipal20.jpg" alt="Compressor Star delta starting check">
+          <img src="./graphics/manipal13.jpg" alt="transformer tap changing test">
         </div>
       </div>
 
@@ -4217,8 +4217,8 @@ normalization</p>
           <li>Prepared performance reports and upgrade suggestions.</li>
         </ul>
         <div class="internship-img-row">
-          <img src="./graphics/data1.jpg" alt="Data Visualization">
-          <img src="./graphics/data2.jpg" alt="Load Graph">
+          <img src="./graphics/manipal21.png" alt="load clustering analysis">
+          <img src="./graphics/manipal23.png" alt="Design vs actual work inspection">
         </div>
       </div>
 
@@ -5510,6 +5510,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
