--- a/index.html
+++ b/index.html
@@ -4082,6 +4082,11 @@ normalization</p>
 
 
 
+ 
+  
+  
+  
+  
   <!-- NEW INTERNSHIP SECTION -->
 <section id="internship" class="section aerospace-bg"> <!-- Reuse aerospace-bg or add custom -->
   <div class="max-w-7xl mx-auto">
@@ -4100,13 +4105,6 @@ normalization</p>
         <!-- Add images if you have: <img src="./assets/internship/manipal1.png" ... onclick="openModal(...)"> -->
         <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Manipal Internship Details" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Details</a>
       </div>
-
-
-
-
-
-
-
 
 
 
@@ -4161,8 +4159,8 @@ normalization</p>
       <a href="mailto:deepak.poudel@student.isae-supaero.fr?subject=Manipal Internship Details" class="block mt-6 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Details</a>
     </div>
 
-    <!-- GRID OF 6 BOXES -->
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+    <!-- GRID OF 6 BOXES: 3 rows x 2 columns -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
       <!-- BOX 1 -->
       <div class="project-card">
         <div class="hud-corner tl"></div>
@@ -4310,6 +4308,11 @@ normalization</p>
     </div>
   </div>
 </section>
+
+
+
+
+  
 
 <!-- ====================== STYLES ====================== -->
 <style>
@@ -5546,6 +5549,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
