--- a/index.html
+++ b/index.html
@@ -4169,8 +4169,7 @@ normalization</p>
         <div class="hud-corner br"></div>
         <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">⚡ POWER SYSTEM ARCHITECTURE</h3>
         <ul class="text-sm mb-4 list-disc pl-4">
-          <li>Studied hospital power architecture.</li>
-          <li>Understood ATS, AVR, and grid backup mechanisms.</li>
+          <li>Studied hospital power architecture including grid-backup coordination, bus coupling, Automatic Transfer Switch (ATS), and Automatic Voltage Regulator (AVR) systems..</li>
         </ul>
         <div class="flex flex-col md:flex-row gap-4">
           <div class="flex-1">
@@ -4190,9 +4189,9 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">🧠 AUTOMATION & CONTROL</h3>
+        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">🧠 PLC SCADA BASED AUTOMATION AND  CONTROL</h3>
         <ul class="text-sm mb-4 list-disc pl-4">
-          <li>Worked with PLC, SCADA, and HMI systems.</li>
+          <li>Observed the working principles of PLC, SCADA, <br>and HMI systems used for automation, monitoring, and centralized control.</li>
           <li>Understood PLC logic for ATS switching.</li>
         </ul>
         <div class="flex flex-col md:flex-row gap-4">
@@ -4213,10 +4212,10 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">🏗️ DESIGN & DRAFTING</h3>
+        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">🏗️ AUTOCAD DESIGN REVIEW AND CORRECTIONS  </h3>
         <ul class="text-sm mb-4 list-disc pl-4">
-          <li>Created AutoCAD layouts for panels and circuits.</li>
-          <li>Designed sub-circuits and electrical drawings.</li>
+          <li> Supervised Design vs Actual layouts for panels and  sub circircuits.</li>
+          <li>Designed corrected power and lighting-subcircuits .</li>
         </ul>
         <div class="flex flex-col md:flex-row gap-4">
           <div class="flex-1">
@@ -4236,10 +4235,12 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">💡 ONCOLOGY PANEL & LIGHTING</h3>
+        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">PANEL AND SUB CIRCIUT DESIGN OF ONCOLOGY DEPARTMENT.</h3>
         <ul class="text-sm mb-4 list-disc pl-4">
-          <li>Supervised Oncology Department circuits.</li>
-          <li>Ensured safety, grounding, and load balance.</li>
+  <li>Load Calulations,BOQ estimates,Load Balancing,UPS/City supply selection.</li>
+          <li>Panel and Sub ciriut design of ongoing cancer treatment facility under supervision of Head EE.</li>
+
+  
         </ul>
         <div class="flex flex-col md:flex-row gap-4">
           <div class="flex-1">
@@ -4261,8 +4262,9 @@ normalization</p>
         <div class="hud-corner br"></div>
         <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">🧰 MAINTENANCE & FIELD WORK</h3>
         <ul class="text-sm mb-4 list-disc pl-4">
-          <li>Assisted in ETP, incinerator, and pump maintenance.</li>
-          <li>Conducted field inspections and diagnostics.</li>
+ <li>Tap Changing Mechanism of Transformer review and adjustment.</li>
+  <li>Star Delta wiring adjustments and panel review on ETP,INcenrator Plants.</li>
+         
         </ul>
         <div class="flex flex-col md:flex-row gap-4">
           <div class="flex-1">
@@ -4284,8 +4286,8 @@ normalization</p>
         <div class="hud-corner br"></div>
         <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">📊 DATA & REPORTING</h3>
         <ul class="text-sm mb-4 list-disc pl-4">
-          <li>Performed load profiling and energy analytics.</li>
-          <li>Prepared performance reports and upgrade suggestions.</li>
+          <li>Performed a detailed python based load profiling and energy analytics.</li>
+          <li>Prepared and presented performance reports and upgrade suggestions.</li>
         </ul>
         <div class="flex flex-col md:flex-row gap-4">
           <div class="flex-1">
@@ -5549,6 +5551,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
