--- a/index.html
+++ b/index.html
@@ -4114,7 +4114,6 @@ normalization</p>
 
 
 
-
 <!-- ====================== INTERNSHIP EXPERIENCE SECTION ====================== -->
 <section id="internship" class="section aerospace-bg">
   <div class="max-w-7xl mx-auto">
@@ -4167,18 +4166,18 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">⚡ POWER SYSTEM ARCHITECTURE</h3>
-        <ul class="text-sm mb-4 list-disc pl-4">
+        <h3 class="orbitron text-xl font-bold mb-2 text-accent-cyan">⚡ POWER SYSTEM ARCHITECTURE</h3>
+        <ul class="text-sm mb-2 list-disc pl-4">
           <li>Studied hospital power architecture including grid-backup coordination, bus coupling, Automatic Transfer Switch (ATS), and Automatic Voltage Regulator (AVR) systems..</li>
         </ul>
-        <div class="flex flex-col md:flex-row gap-4">
+        <div class="flex flex-col md:flex-row gap-2">
           <div class="flex-1">
-            <img src="./graphics/manipal9.jpg" alt="Power diagram" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal9.jpg', 'Power diagram')">
-            <p class="text-xs text-center mt-1">Power diagram</p>
+            <img src="./graphics/manipal9.jpg" alt="Power diagram" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal9.jpg', 'Power diagram')">
+            <p class="text-xs text-center mt-0">Power diagram</p>
           </div>
           <div class="flex-1">
-            <img src="./graphics/manipal12.jpg" alt="Panel wiring" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal12.jpg', 'Panel wiring')">
-            <p class="text-xs text-center mt-1">Panel wiring</p>
+            <img src="./graphics/manipal12.jpg" alt="Panel wiring" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal12.jpg', 'Panel wiring')">
+            <p class="text-xs text-center mt-0">Panel wiring</p>
           </div>
         </div>
       </div>
@@ -4189,19 +4188,19 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">🧠 PLC SCADA BASED AUTOMATION AND  CONTROL</h3>
-        <ul class="text-sm mb-4 list-disc pl-4">
+        <h3 class="orbitron text-xl font-bold mb-2 text-accent-cyan">🧠 PLC SCADA BASED AUTOMATION AND  CONTROL</h3>
+        <ul class="text-sm mb-2 list-disc pl-4">
           <li>Observed the working principles of PLC, SCADA, <br>and HMI systems used for automation, monitoring, and centralized control.</li>
           <li>Understood PLC logic for ATS switching.</li>
         </ul>
-        <div class="flex flex-col md:flex-row gap-4">
+        <div class="flex flex-col md:flex-row gap-2">
           <div class="flex-1">
-            <img src="./graphics/manipal6.jpg" alt="PLC Panel" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal6.jpg', 'PLC Panel')">
-            <p class="text-xs text-center mt-1">PLC Panel</p>
+            <img src="./graphics/manipal6.jpg" alt="PLC Panel" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal6.jpg', 'PLC Panel')">
+            <p class="text-xs text-center mt-0">PLC Panel</p>
           </div>
           <div class="flex-1">
-            <img src="./graphics/manipal8.jpg" alt="SCADA System" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal8.jpg', 'SCADA System')">
-            <p class="text-xs text-center mt-1">SCADA System</p>
+            <img src="./graphics/manipal8.jpg" alt="SCADA System" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal8.jpg', 'SCADA System')">
+            <p class="text-xs text-center mt-0">SCADA System</p>
           </div>
         </div>
       </div>
@@ -4212,19 +4211,19 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">🏗️ AUTOCAD DESIGN REVIEW AND CORRECTIONS  </h3>
-        <ul class="text-sm mb-4 list-disc pl-4">
+        <h3 class="orbitron text-xl font-bold mb-2 text-accent-cyan">🏗️ AUTOCAD DESIGN REVIEW AND CORRECTIONS  </h3>
+        <ul class="text-sm mb-2 list-disc pl-4">
           <li> Supervised Design vs Actual layouts for panels and  sub circircuits.</li>
           <li>Designed corrected power and lighting-subcircuits .</li>
         </ul>
-        <div class="flex flex-col md:flex-row gap-4">
+        <div class="flex flex-col md:flex-row gap-2">
           <div class="flex-1">
-            <img src="./graphics/manipal16.png" alt="Autocad Design" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal16.png', 'Autocad Design')">
-            <p class="text-xs text-center mt-1">Autocad Design</p>
+            <img src="./graphics/manipal16.png" alt="Autocad Design" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal16.png', 'Autocad Design')">
+            <p class="text-xs text-center mt-0">Autocad Design</p>
           </div>
           <div class="flex-1">
-            <img src="./graphics/manipal15.png" alt="Panel Design Autocad" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal15.png', 'Panel Design Autocad')">
-            <p class="text-xs text-center mt-1">Panel Design Autocad</p>
+            <img src="./graphics/manipal15.png" alt="Panel Design Autocad" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal15.png', 'Panel Design Autocad')">
+            <p class="text-xs text-center mt-0">Panel Design Autocad</p>
           </div>
         </div>
       </div>
@@ -4235,21 +4234,19 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">PANEL AND SUB CIRCIUT DESIGN OF ONCOLOGY DEPARTMENT.</h3>
-        <ul class="text-sm mb-4 list-disc pl-4">
-  <li>Load Calulations,BOQ estimates,Load Balancing,UPS/City supply selection.</li>
+        <h3 class="orbitron text-xl font-bold mb-2 text-accent-cyan">PANEL AND SUB CIRCIUT DESIGN OF ONCOLOGY DEPARTMENT.</h3>
+        <ul class="text-sm mb-2 list-disc pl-4">
+          <li>Load Calulations,BOQ estimates,Load Balancing,UPS/City supply selection.</li>
           <li>Panel and Sub ciriut design of ongoing cancer treatment facility under supervision of Head EE.</li>
-
-  
         </ul>
-        <div class="flex flex-col md:flex-row gap-4">
+        <div class="flex flex-col md:flex-row gap-2">
           <div class="flex-1">
-            <img src="./graphics/manipal18.png" alt="Oncology wiring design" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal18.png', 'Oncology wiring design')">
-            <p class="text-xs text-center mt-1">Oncology wiring design</p>
+            <img src="./graphics/manipal18.png" alt="Oncology wiring design" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal18.png', 'Oncology wiring design')">
+            <p class="text-xs text-center mt-0">Oncology wiring design</p>
           </div>
           <div class="flex-1">
-            <img src="./graphics/manipal19.jpg" alt="Physical Panel" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal19.jpg', 'Physical Panel')">
-            <p class="text-xs text-center mt-1">Physical Panel</p>
+            <img src="./graphics/manipal19.jpg" alt="Physical Panel" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal19.jpg', 'Physical Panel')">
+            <p class="text-xs text-center mt-0">Physical Panel</p>
           </div>
         </div>
       </div>
@@ -4260,20 +4257,19 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">🧰 MAINTENANCE & FIELD WORK</h3>
-        <ul class="text-sm mb-4 list-disc pl-4">
+        <h3 class="orbitron text-xl font-bold mb-2 text-accent-cyan">🧰 MAINTENANCE & FIELD WORK</h3>
+        <ul class="text-sm mb-2 list-disc pl-4">
  <li>Tap Changing Mechanism of Transformer review and adjustment.</li>
   <li>Star Delta wiring adjustments and panel review on ETP,INcenrator Plants.</li>
-         
         </ul>
-        <div class="flex flex-col md:flex-row gap-4">
+        <div class="flex flex-col md:flex-row gap-2">
           <div class="flex-1">
-            <img src="./graphics/manipal20.jpg" alt="Compressor Star delta starting check" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal20.jpg', 'Compressor Star delta starting check')">
-            <p class="text-xs text-center mt-1">Compressor Star delta starting check</p>
+            <img src="./graphics/manipal20.jpg" alt="Compressor Star delta starting check" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal20.jpg', 'Compressor Star delta starting check')">
+            <p class="text-xs text-center mt-0">Compressor Star delta starting check</p>
           </div>
           <div class="flex-1">
-            <img src="./graphics/manipal13.jpg" alt="transformer tap changing test" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal13.jpg', 'transformer tap changing test')">
-            <p class="text-xs text-center mt-1">transformer tap changing test</p>
+            <img src="./graphics/manipal13.jpg" alt="transformer tap changing test" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal13.jpg', 'transformer tap changing test')">
+            <p class="text-xs text-center mt-0">transformer tap changing test</p>
           </div>
         </div>
       </div>
@@ -4284,19 +4280,19 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">📊 DATA & REPORTING</h3>
-        <ul class="text-sm mb-4 list-disc pl-4">
+        <h3 class="orbitron text-xl font-bold mb-2 text-accent-cyan">📊 DATA & REPORTING</h3>
+        <ul class="text-sm mb-2 list-disc pl-4">
           <li>Performed a detailed python based load profiling and energy analytics.</li>
           <li>Prepared and presented performance reports and upgrade suggestions.</li>
         </ul>
-        <div class="flex flex-col md:flex-row gap-4">
+        <div class="flex flex-col md:flex-row gap-2">
           <div class="flex-1">
-            <img src="./graphics/manipal22.png" alt="load clustering analysis" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal22.png', 'load clustering analysis')">
-            <p class="text-xs text-center mt-1">load clustering analysis</p>
+            <img src="./graphics/manipal22.png" alt="load clustering analysis" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal22.png', 'load clustering analysis')">
+            <p class="text-xs text-center mt-0">load clustering analysis</p>
           </div>
           <div class="flex-1">
-            <img src="./graphics/manipal26.png" alt="Oncology Proposed Design Sample" class="project-image w-full h-auto rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal26.png', 'Oncology Proposed Design Sample')">
-            <p class="text-xs text-center mt-1">Oncology Proposed Design Sample</p>
+            <img src="./graphics/manipal26.png" alt="Oncology Proposed Design Sample" class="project-image w-full aspect-[4/3] object-cover rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal26.png', 'Oncology Proposed Design Sample')">
+            <p class="text-xs text-center mt-0">Oncology Proposed Design Sample</p>
           </div>
         </div>
       </div>
@@ -4311,50 +4307,37 @@ normalization</p>
   </div>
 </section>
 
-
-
-
-  
-
 <!-- ====================== STYLES ====================== -->
 <style>
-  /* Reuse existing website styles; no additional dark bg-gradient needed as section uses aerospace-bg */
-  
-  /* Keep custom styles if necessary, but align with website */
-  .internship-card {
-    background: rgba(0, 0, 0, 0.8); /* Match project-card bg */
-    border: 1px solid var(--primary-blue);
-    border-radius: 15px;
-    padding: 2rem;
-    transition: all 0.3s ease;
-    position: relative;
-    overflow: hidden;
+  /* Tighten spacing in project-card */
+  .project-card {
+    padding: 1.5rem; /* Reduced from 2rem */
   }
 
-  .internship-card:hover {
-    transform: translateY(-10px) rotateX(5deg) rotateY(5deg);
-    box-shadow: 0 20px 40px rgba(0, 212, 255, 0.3);
+  /* Reduce margins */
+  .project-card h3 {
+    margin-bottom: 0.5rem; /* Reduced mb-4 to mb-2, but tightened further */
   }
 
-  /* Shake animation for hover effect (from existing) */
-  .shake-on-hover {
-    transition: transform 0.5s ease-in-out;
+  .project-card ul {
+    margin-bottom: 0.5rem; /* Reduced mb-4 to mb-2 */
   }
-  .shake-on-hover:hover {
-    animation: shake 5s infinite;
+
+  .project-card .flex {
+    gap: 0.5rem; /* Reduced gap-4 to gap-2 */
   }
-  @keyframes shake {
-    0% { transform: translate(0, 0) rotate(0deg); }
-    25% { transform: translate(2px, 2px) rotate(0.5deg); }
-    50% { transform: translate(-2px, -2px) rotate(-0.5deg); }
-    75% { transform: translate(2px, -2px) rotate(0.5deg); }
-    100% { transform: translate(0, 0) rotate(0deg); }
+
+  /* Set fixed aspect ratio for images */
+  .project-image {
+    aspect-ratio: 4/3; /* 4:3 ratio as requested */
+    object-fit: cover; /* Cover to fill without distortion */
+  }
+
+  /* Remove mt-1 from captions, use mt-0 */
+  .text-xs.text-center {
+    margin-top: 0 !important;
   }
 </style>
-
-
-
-
 
 
 
