--- a/index.html
+++ b/index.html
@@ -4347,8 +4347,8 @@ normalization</p>
 
   .internship-img-wrapper img {
     width: 100%;
-    height: 140px;
-    object-fit: cover;
+    height: 200px;
+    object-fit: contain;
     display: block;
   }
 
@@ -5563,6 +5563,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
